# -48co-ai-pa

./: .env.example  .env.example (required env vars not documented)  .gitignore  CLAUDE.md  Globals  Layout  Mictoggle  Page  README.md  README.md at root  SECURITY.md  STRATEGY.md  Tailwind.config  Waveform  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  wrangler.toml
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-desktop.yml  build-tauri.yml  ci.yml  deploy-api.yml  deploy-website.yml
android-keyboard/: README.md  settings.gradle.kts
android-keyboard/app/: build.gradle.kts
android-keyboard/app/src/main/: AndroidManifest.xml
api/: .env.example  package.json  server.js
app/: globals.css  layout.jsx  page.jsx
app/admin/: page.jsx
app/api/admin/promote/: route.js
app/api/auth/google/: route.js
app/api/auth/login/: route.js
app/api/auth/logout/: route.js
app/api/auth/signup/: route.js
app/api/auth/verify-email/: route.js
app/api/domains/scan/: route.js
app/api/generate/site/: route.js
app/api/grammar/: route.js
app/api/health/: route.js
app/api/marketplace/: route.js
app/api/marketplace/[id]/: route.js
app/api/marketplace/purchase/: route.js
app/api/rewrite/: route.js
app/api/sites/deploy/: route.js
app/api/stripe/checkout/: route.js
app/api/stripe/portal/: route.js
app/api/stripe/webhook/: route.js
app/api/translate/: route.js
app/api/usage/: route.js
app/compare/: page.jsx
app/download/: page.jsx
app/install/: page.jsx
app/live/: page.jsx
app/marketplace/: page.jsx
app/marketplace/[id]/: page.jsx
app/pricing/: PricingCards.jsx  page.jsx
app/privacy/: page.jsx
app/security/: page.jsx
app/terms/: page.jsx
components/: Footer.jsx  IndustryFilter.jsx  ListingCard.jsx  MicToggle.jsx  Nav.jsx  Waveform.jsx
desktop/: package.json
desktop/main/: index.js  preload.js
desktop/renderer/: overlay.html  settings.html
desktop/scripts/: generate-icons.js
down-scanner/: Cargo.toml
down-scanner/src/: browser_fix.rs  main.rs  quarantine.rs  remover.rs  report.rs  threat.rs  updater.rs
down-scanner/src/scanner/: browser.rs  files.rs  network.rs  processes.rs  scareware.rs  startup.rs
down-scanner/src/signatures/: extension_ids.rs  hashes.rs  hijacker_domains.rs  ip_blocklist.rs  mod.rs  process_names.rs
extension/: background.js  content.js  generate-icons.html  grammar.js  manifest.json  offscreen.html  offscreen.js  package-lock.json  package.json  popup.html  popup.js  welcome.html
extension/adapters/: base.js  chatgpt.js  claude.js  deepseek.js  gemini.js  index.js
extension/lib/: coding-mode.js  coding-mode.test.js  voice-commands.js  voice-commands.test.js
ios-keyboard/: README.md
ios-keyboard/FortyEightCoKeyboard/: AppDelegate.swift  Info.plist  MainViewController.swift
ios-keyboard/KeyboardExtension/: GrammarEngine.swift  Info.plist  KeyboardTheme.swift  KeyboardViewController.swift  VoiceEngine.swift
lib/: db.js  domains.js  site-generator.js  stripe.js
lib/templates/: base.js  health.js  hospitality.js  legal.js  mining.js  realestate.js  tourism.js  trades.js
mobile/: README.md  app.json  package.json
prisma/: schema.prisma
prisma/migrations/20260426095308_init/: migration.sql
prisma/migrations/20260426104619_marketplace_layer/: migration.sql
prisma/migrations/20260426110458_layer3_associations_subscriptions/: migration.sql
public/: inject.js  manifest.json
robots.txt (or app/: robots.ts route)
shared-rust/: Cargo.toml
shared-rust/src/: fortyeightco-core.udl  grammar.rs  lib.rs  number_format.rs  punctuation.rs  translation.rs  vocabulary.rs
src/: middleware.ts  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx  page.tsx
src/app/(app)/activity/: page.tsx
src/app/(dashboard)/: layout.tsx
src/app/a/[slug]/: page.tsx
src/app/dashboard/: page.tsx
src/app/find-tradies/: page.tsx
src/app/jobs-board/: page.tsx
src/app/login/: page.tsx
src/app/post-job/: PostJobForm.tsx  page.tsx
src/app/pricing/: page.tsx
src/app/register/: page.tsx
src/components/: app-sidebar.tsx  cost-hud.tsx  project-card.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx
src/lib/: anthropic.ts  auth.ts  context.ts  db.ts  email.ts  format.ts  github.ts  memory.ts  models.ts  notifications.ts  prisma.ts  stripe.ts  utils.ts
src/lib/agents/: models.ts  types.ts
tauri-app/: index.html  package.json  vite.config.js
tauri-app/src/: App.jsx  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: audio.rs  grammar.rs  hotkeys.rs  keyboard.rs  lib.rs  local_grammar.rs  local_whisper.rs  main.rs  transcribe.rs
(+78 files in other folders)
