[package]
name = "fortyeightco-core"
version = "0.1.0"
edition = "2021"
description = "48co Voice shared core library — grammar, punctuation, number formatting, vocabulary"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "fortyeightco_core"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.28", features = ["cli"] }
