[package]
name = "fortyeightco"
version = "1.0.0"
description = "48co — AI Grammar + Voice-to-Text"
authors = ["48co"]
edition = "2021"

[lib]
name = "fortyeightco_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "global-shortcut",
  "clipboard-manager",
  "shell-open",
] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"          # Cross-platform keyboard/mouse simulation (replaces nut-tree)
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"          # Cross-platform audio capture
hound = "3.5"          # WAV encoding for Whisper API
regex = "1"            # Text processing patterns
once_cell = "1"        # Lazy static initialization
