[package]
name = "alecrae_voice"
version = "1.0.0"
description = "AlecRae Voice — AI Grammar + Voice-to-Text"
authors = ["AlecRae"]
edition = "2021"

[lib]
name = "alecrae_voice_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "global-shortcut",
  "shell-open",
] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"              # Cross-platform keyboard/mouse simulation
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
cpal = "0.15"              # Cross-platform audio capture
hound = "3.5"              # WAV encoding for Whisper API
regex = "1"                # Text processing patterns
once_cell = "1"            # Lazy static initialization
whisper-rs = "0.12"        # whisper.cpp Rust bindings — on-device speech-to-text
dirs = "5"                 # OS-standard directories for model storage
rdev = "0.5"               # Global mouse + keyboard event capture (for custom hotkeys)
candle-core = { version = "0.8", optional = true }       # Local LLM inference (future)
candle-transformers = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }

[features]
default = []
local-llm = ["candle-core", "candle-transformers", "candle-nn"]
